# qr_scanner

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: activate.launch
src/: main.cpp  main.cpp~
